--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Caluclator</title>
-    <link rel="stylesheet" href="Css/bootstrap.css">
-    <link rel="stylesheet" href="Css/styles.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
         
@@ -51,6 +51,6 @@
         </div>
     </div>
 
-    <script src="Script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
